--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
 
     <link rel="shortcut icon" href="./css/unnamed.png" type="image/x-icon" />
     <style>
+        .TrackATransferTextField_tat-inline-error__zmVLb {
+    margin-top: 4px;
+    padding-left: 6px;
+    text-align: left;
+    display: inline-block;
+}
       @media (max-width: 1599.98px) {
     .TrackATransferTextField_tat-input-number__H32mz {
         width: 32px !important;
@@ -1307,7 +1313,7 @@
                                                     <input  onKeyPress="if(this.value.length == 1) return false;" onkeyup= "next_input(event, 'page_1_10', 'page_1_8')"   id="page_1_9"  pattern="/^-?\d+\.?\d*$/"     class="inputcheck TrackATransferTextField_tat-input-number__H32mz font-hs "  autocomplete="off" name="digit" contenteditable="true" maxlength="1" placeholder="0" type="number"  qm-data-rule="mask" value="" style="outline: 0px; border-width: 0px 0px 1px; border-radius: 0px; color: var(--color-textPrimary); border-color: var(--color-borderTertiary);"></span><span class="TrackATransferTextField_input-number-wrapper__NK0nw">
                                                     <input   onKeyPress="if(this.value.length == 1) return false;"  onkeyup= "out_('1'); next_input(event, 'page_1_10', 'page_1_9') " pattern="/^-?\d+\.?\d*$/" id="page_1_10"     class="inputcheck TrackATransferTextField_tat-input-number__H32mz font-hs "  autocomplete="off" name="digit" contenteditable="true" maxlength="1" placeholder="0" type="number"  qm-data-rule="mask" value="" style="outline: 0px; border-width: 0px 0px 1px; border-radius: 0px; color: var(--color-textPrimary); border-color: var(--color-borderTertiary);"></span>
                                                 </form>
-                                                <span id="label_tat_mtcn_error1" style='display:none;'><span class="TrackATransferTextField_tat-inline-error__zmVLb font-cl" style="    font-weight: bold; color: var(--color-errorPrimary); width: 669px;">لم نتمكن من العثور على عملية التحويل التي تبحث عنها. يُرجى التحقق من رقم MTCN وإعادة المحاولة.</span></span>
+                                                <span id="label_tat_mtcn_error1" style='display:none;'><span class="TrackATransferTextField_tat-inline-error__zmVLb font-cl" style="    color: var(--color-errorPrimary);">لم نتمكن من العثور على عملية التحويل التي تبحث عنها. يُرجى التحقق من رقم MTCN وإعادة المحاولة.</span></span>
 
                                             </div>
                                         </div>
@@ -1639,7 +1645,7 @@
                                                     <input onKeyPress="if(this.value.length == 1) return false;" onkeyup="next_input(event, 'page_2_10' , 'page_2_8')"   id="page_2_9" pattern="/^-?\d+\.?\d*$/"   class="inputcheck inputcheck2 TrackATransferTextField_tat-input-number__H32mz font-hs "  autocomplete="off" name="digit" contenteditable="true" maxlength="1" placeholder="0" type="number"  qm-data-rule="mask" value="" style="outline: 0px; border-width: 0px 0px 1px; border-radius: 0px; color: var(--color-textPrimary); border-color: var(--color-borderTertiary);"></span><span class="TrackATransferTextField_input-number-wrapper__NK0nw">
                                                     <input onKeyPress="if(this.value.length == 1) return false;" onkeyup= "out_('2');next_input(event, 'page_2_10' , 'page_2_9')"  id="page_2_10" pattern="/^-?\d+\.?\d*$/"   class="inputcheck inputcheck2 TrackATransferTextField_tat-input-number__H32mz font-hs "  autocomplete="off" name="digit" contenteditable="true" maxlength="1" placeholder="0" type="number"  qm-data-rule="mask" value="" style="outline: 0px; border-width: 0px 0px 1px; border-radius: 0px; color: var(--color-textPrimary); border-color: var(--color-borderTertiary);"></span>
                                                 </form>
-                                                <span id="label_tat_mtcn_error1" style='display:none;'><span class="TrackATransferTextField_tat-inline-error__zmVLb font-cl" style="    font-weight: bold; color: var(--color-errorPrimary); width: 669px;">لم نتمكن من العثور على عملية التحويل التي تبحث عنها. يُرجى التحقق من رقم MTCN وإعادة المحاولة.</span>
+                                                <span id="label_tat_mtcn_error1" style='display:none;'><span class="TrackATransferTextField_tat-inline-error__zmVLb font-cl" style="    color: var(--color-errorPrimary);">لم نتمكن من العثور على عملية التحويل التي تبحث عنها. يُرجى التحقق من رقم MTCN وإعادة المحاولة.</span>
 
                                             </div>
                                             
